# BLE

Common/components/hello/: CMakeLists.txt  hello.c
gatt_server_service_table/: CMakeLists.txt
gatt_server_service_table/components/Lib/: CMakeLists.txt  lib.c  lib.h
gatt_server_service_table/main/: CMakeLists.txt  gatts_table_creat_demo.c  gatts_table_creat_demo.h
